# python-starter

./: README.md  pyproject.toml  pytest-coverage.txt  pytest.xml
.github/workflows/: checks.yml
src/python_starter/: __init__.py
src/python_starter/helper_module/: __init__.py  value.py
tests/: test_helper.py  test_main.py
