[tool.poetry]
name = "python_starter"
version = "0.1.0"
description = ""
authors = ["Christopher Little-Savage <cls@powerx.ai>"]
readme = "README.md"
packages = [{ include = "python_starter", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.12.0"
coverage = "^7.3.2"
pytest-coverage = "^0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pyright = "^1.1.329"
isort = "^5.12.0"
black = "^23.1.0"
coverage = "^7.2.7"
python-dotenv = "^1.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = 'python_starter:main'

[tool.isort]
profile = "black"

[tool.pyright]
include = ["flounder"]
typeCheckingMode = "strict"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
strictListInference = true
strictDictionaryInference = true
pythonVersion = "3.11"
